# sendmail-sec

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: check.yml  codeql.yml  release-binaries.yml  release-docker.yml
devops/: package.json
devops/sources/: docker_image_release.ts  versioning.ts
devops/tests/: versioning.test.ts
examples/: config.json  config.yaml
scripts/: build-docker-image-artifact.sh  docker-integration-test.sh  retry-docker-pull.sh
sources/: app.rs  cli.rs  config.rs  listener.rs  main.rs  message.rs  openpgp.rs  remote_smtp.rs  tls.rs
