[package]
name = "sendmail-sec"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "sendmail-sec"
path = "sources/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ipnet = { version = "2.10", features = ["serde"] }
mailparse = "0.16"
reqwest = { version = "0.13", default-features = false, features = ["http2", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2"
sequoia-openpgp = { version = "2.2", default-features = false, features = ["allow-experimental-crypto", "allow-variable-time-crypto", "compression-deflate", "crypto-rust"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.11"
tokio = { version = "1.48", features = ["full"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2.1"
uuid = { version = "1.18", features = ["v4"] }
webpki-root-certs = "1.0"
webpki-roots = "1.0"
